--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2955,7 +2955,7 @@ input, select, textarea {
 
 			header.major > p {
 				margin-top: 0;
-				text-align: center;
+				text-align: justify;
 			}
 
 			header.major > .date {
