--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2947,6 +2947,7 @@ input, select, textarea {
 		header.major {
 			margin: 0 0 4rem 0;
 			text-align: justify;
+			text-align-last: center;
 		}
 
 			header.major > :last-child {
